# unitree-go2-mcp-server

./: .gitignore  CONTRIBUTING.md  MCPFUNCTIONS.md  README.md  pyproject.toml  server.py
msgs/: __init__.py  wirelesscontroller.py
utils/: ros2_manager.py
