[project]
name = "unitree-go2-mcp-server"
version = "0.1.0"
description = "The Unitree Go2 MCP Server is a server built on the MCP that enables users to control the Unitree Go2 robot using natural language commands interpreted by a LLM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.7.1",
    "websocket>=0.2.1",
]
